<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/netBanking"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/net_banking"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/banksSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintTop_toBottomOf="@id/netBanking" />


        <TextView
            android:id="@+id/wallet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/wallets"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/banksSpinner" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/walletSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintTop_toBottomOf="@id/wallet" />

        <TextView
            android:id="@+id/payLater"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pay_later"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/walletSpinner" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/payLaterSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintTop_toBottomOf="@id/payLater" />

        <TextView
            android:id="@+id/upiText"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/payLaterSpinner"
            android:layout_height="0dp"
            android:textAlignment="center"
            android:padding="10dp"
            app:layout_constraintHeight_percent="0.1"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintWidth_percent="0.3"
            android:text="@string/upi"/>

        <TextView
            android:id="@+id/creditCardText"
            android:layout_width="0dp"
            app:layout_constraintStart_toEndOf="@id/upiText"
            app:layout_constraintTop_toBottomOf="@+id/payLaterSpinner"
            android:layout_height="0dp"
            android:textAlignment="center"
            android:padding="10dp"
            app:layout_constraintHeight_percent="0.1"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintWidth_percent="0.3"
            android:text="@string/credit_card"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>